[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ffff-tool-01gg"
version = "1.0.0"
authors = [
  { name="Lois-Kleinner", email="author@example.com" },
  { name="0-1.gg", email="author@example.com" }
]
description = "A tool to pack and unpack the Fully Flexible File Format (.ffff)."
readme = "README.md"
requires-python = ">=3.7"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
ffff = "ffff:main"